--- a/index.html
+++ b/index.html
@@ -17,8 +17,8 @@
 
           <div class ="jumbotron">
 
-            <h1>Giphy</h1>
-            <p>Search for Gifs!</p>
+            <h1>MMA Fighter Gifs</h1>
+            <p>Load already created fighter gifs, or create your own.</p>
           </div>
 
         </div>
