--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
   <div class="container">
 
-    <div class ="row" id="header">
+    <div class ="row" id="title">
 
         <div class ="col-xs-12">
 
@@ -41,18 +41,18 @@
 
       <div class="col-xs-10">
 
-        <div id="fighter-view"></div>
+        <div id="fighter-view"3></div>
 
       </diV>
 
       <div class="col-xs-2 noPadding">
 
         <form id="fighter-form">
-          <label for="fighter-input">Search for Gifs</label>
+          <label class="text-center" for="fighter-input">Add Fighter</label>
           <input type="text" id="fighter-input"><br>
 
           <!-- Button triggers new movie to be added -->
-          <input id="add-fighter" type="submit" value="Add Fighter">
+          <input class="addBtn" id="add-fighter" type="submit" value="Add Fighter">
         </form>
 
       </div>
